# window/status/models.py
@@ -7,6 +7,11 @@ from django.db import models
 
 class Temperature(models.Model):
     pub_date = models.DateTimeField('date published')
-    temp_value = models.CharField(max_length=50)
-    temp_type =  models.CharField(max_length=3)
+    location = models.CharField(max_length=3)
+    temperature = models.FloatField()
+    humidity = models.FloatField()
 
+
+class Window(models.Model):
+    pub_date = models.DateTimeField('date published')
+    state = models.CharField(max_length=5)
